# dev-x

./: .gitignore  README.md  feature-plan.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  app.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  lib_fallback.rs  main.rs  models.rs  state.rs
src-tauri/src/app/: mod.rs  overlay.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/services/: command_executor.rs  command_registry.rs  crypto.rs  data.rs  design.rs  extension_loader.rs  filesystem.rs  local_ai.rs  mock.rs  mod.rs  network.rs  shell.rs  storage.rs  system_metrics.rs  text.rs
src/lib/: types.ts
src/lib/components/: AppRail.svelte  CommandPalette.svelte  HistoryPanel.svelte  PreviewPane.svelte  SettingsPanel.svelte  StatusBar.svelte
src/lib/core/: command-sections.ts  config-crypto.ts  tool-meta.ts
src/lib/ipc/: client.ts
src/lib/stores/: app-shell.ts
