[package]
name = "devforge"
version = "0.1.0"
description = "Privacy-first desktop developer supertool"
authors = ["Codex"]
edition = "2021"

[lib]
name = "devforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "2.0.3"
