[package]
name = "devforge"
version = "0.1.0"
description = "Privacy-first desktop developer supertool"
authors = ["Codex"]
edition = "2021"

[package.metadata]

[lib]
name = "devforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
csv = "1.3"
quick-xml = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "2.0.3"
sha2 = "0.10"
md-5 = "0.10"
sha-1 = "0.10"
crc32fast = "1.4"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "v7"] }
rand = "0.8"
hmac = "0.12"
hex = "0.4"
regex = "1"
aes = "0.8"
chacha20 = "0.9"
cipher = { version = "0.4", features = ["block-padding"] }
cbc = "0.1"
rsa = "0.9"
bcrypt = "0.16"
argon2 = "0.5"
lazy_static = "1.5"
sysinfo = "0.32"
